# tiramisu_os

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  x86_64-none.json  x86_64-tiramisu_os.json
.cargo/: config.toml
.nvim/: lsp.lua
kcore/: Cargo.toml
kcore/src/: lib.rs
kernel/: Cargo.toml  README.md
kernel/interrupts/: Cargo.toml
kernel/interrupts/src/: gdt.rs  idt.rs  lib.rs  test.rs
kernel/logging/: Cargo.toml
kernel/logging/src/: lib.rs
kernel/memory/: Cargo.toml
kernel/memory/src/: lib.rs  slab_alloc.rs
kernel/src/: main.rs
kernel/tiramisu_bootloader/: Cargo.toml
kernel/tiramisu_bootloader/src/: bios.rs  lib.rs  test.rs  uefi.rs
kernel/tiramisu_bootloader/src/bios/: boot.asm  grub.cfg  linker.ld  multiboot_header.asm
kernel/tiramisu_bootloader/src/uefi/: boot.asm
kernel/uart_16550/: Cargo.toml
kernel/uart_16550/src/: errors.rs  lib.rs  test.rs
kernel/vga_text_mode/: Cargo.toml
kernel/vga_text_mode/src/: lib.rs  test.rs
services/src/: lib.rs
src/: lib.rs
src/boot/: boot.asm  linker.ld  multiboot_header.asm
src/boot/bios/: boot.asm
test_system/: Cargo.toml
test_system/src/: lib.rs
userland/src/: lib.rs
