# [package]
# name = "tiramisu_os"
# version = "0.1.0"
# edition = "2021"
# authors = ["cA0"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["kernel/[!.]*/", "test_system"]

default-members = ["kernel/tiramisu_bootloader"]

[workspace.dependencies]

# Internal Crates
tiramisu_bootloader = { path = "kernel/tiramisu_bootloader" }
vga_text_mode = { path = "kernel/vga_text_mode" }
uart_16550 = { path = "kernel/uart_16550" }
test_system = { path = "test_system" }
tiramisu_memory = { path = "kernel/memory" }

# External Crates
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.9.8"
x86 = "0.52.0"
x86_64 = "0.15.2"
bitflags = "2.6.0"

# workaround rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

# workaround rust-lang/rust#47074
[profile.release]
codegen-units = 1
incremental = false
