[workspace]
resolver = "3"
members = ["kcore", "kernel", "services", "userland"]

[workspace.dependencies]
# Internal Dependencies
kcore = { path = "kcore" }
kernel = { path = "kernel" }
services = { path = "services" }
userland = { path = "userland" }

# External Dependencies

[profile.release]
opt-level = 3
lto = true
