[package]
name = "interrupts"
version = "0.1.0"
edition = "2024"
authors = ["cA0"]
description = "Interrupt handling."

[lib]
crate-type = ["rlib"]

[dependencies]
x86_64 = { workspace = true }
lazy_static = { workspace = true }
logging = { workspace = true }
test_system = { workspace = true, optional = true }
spin = { workspace = true }
pic8259 = { workspace = true }
vga_text_mode = { workspace = true }

[features]
default = []
test = ["test_system"]
