[package]
name = "tiramisu_bootloader"
version = "0.1.0"
edition = "2024"
authors = ["cA0"]
description = """Minimalist crate for booting up Tiramisu OS. ASM segment, passed to bios.rs,
then passed on to ___. Based on phil-opp's first edition OS tutorial (starting), and Theseus OS
(for higher half implementation and paging)"""

[lib]
crate-type = ["staticlib"]

[dependencies]
vga_text_mode = { workspace = true }
uart_16550 = { workspace = true }
test_system = { workspace = true }
x86_64 = { workspace = true }
logging = { workspace = true }

[features]
default = ["bios"]
## Build the bootloader for BIOS (multiboot2)
bios = []
## Build the bootloader for UEFI
uefi = []

## Test cases
test = ["vga_text_mode/test", "uart_16550/test"]
