[package]
name = "uart_16550"
version = "0.1.0"
edition = "2024"
description = "UART 16550 driver and writer."

[lib]
crate-type = ["rlib"]
test = false

[dependencies]
lazy_static = { workspace = true }
spin = { workspace = true }
x86 = { workspace = true }
bitflags = { workspace = true }
test_system = { workspace = true }

[features]
default = []
test = []
