[package]
name = "vga_text_mode"
version = "0.1.0"
edition = "2024"
authors = ["cA0"]
description = "VGA text mode buffer."

[dependencies]
lazy_static = { workspace = true }
spin = { workspace = true }
test_system = { workspace = true, optional = true }

[lib]
crate-type = ["rlib"]

[features]
default = []
test = ["test_system"]
